@@ -1,3 +1,7 @@
+2008-10-09 Daniel Nauck <dna@mono-project.de>
+
+        * Makefile.am: fix makefile
+
 2008-09-28  Miguel de Icaza <miguel@novell.com> 
 
 	* History.cs: Remove history, will implement a different system than
